Fixed overlapping issue

--- a/css/picturesStyle.css
+++ b/css/picturesStyle.css
@@ -24,6 +24,7 @@ html {
     display: flex;
     align-items: center;
     width: 100%;
+    z-index: 1;
 }
 
 .topnav a {
